# disanger

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CI.yml  test.yml
crates/lib/adb/: Cargo.toml
crates/lib/adb/src/: error.rs  socket.rs
crates/macro/derive/: Cargo.toml
crates/macro/derive/src/: adb_socket_family.rs  lib.rs
crates/macro/macro_core/: Cargo.toml
crates/macro/macro_core/src/: lib.rs
crates/macro/macro_core_impl/: Cargo.toml
crates/macro/macro_core_impl/src/: attributed_field.rs  lib.rs
src/adb/: error.rs  global_options.rs  mod.rs  socket.rs
src/adb/envs/: adb_libusb.rs  adb_mdns_auto_connect.rs  adb_mdns_openscreen.rs  adb_trace.rs  adb_vendor_keys.rs  android_log_tags.rs  android_serial.rs  mod.rs
src/utils/adb/: mod.rs  socket.rs
src/utils/adb/envs/: adb_libusb.rs  adb_local_transport_max_port.rs  adb_mdns_auto_connect.rs  adb_mdns_openscreen.rs  adb_trace.rs  adb_vendor_keys.rs  android_log_tags.rs  android_serial.rs
