[package]
name = "derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
evalexpr = "11.3.0"
proc-macro2 = "1.0.81"
proc-macro-error = "1.0.4"
quote = "1.0.36"
syn = "2.0.59"

macro_core = { path = "../macro_core" }
macro_core_impl = { path = "../macro_core_impl" }
